Fix issue that produces unexpected scrollbars

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -123,6 +123,9 @@ body {
   color: var(--text-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   user-select: none;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 a.url {
@@ -193,8 +196,8 @@ a:not(.button):not(.url):visited {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 8fr auto auto;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .time-box {
